--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Telegram.WebApp Object Explorer</h1>
     <pre id="webapp-data"></pre>
+    <pre id="webapp-url"></pre>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -41,6 +42,7 @@
 
                 // Вывод данных
                 document.getElementById('webapp-data').textContent = output;
+                document.getElementById('webapp-url').textContent = window.Telegram.WebApp.LocationManager.getLocation();
             } else {
                 document.getElementById('webapp-data').textContent = 'Telegram.WebApp is not available.';
             }
