--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             button.addEventListener('click', () => {
                 try {
                     // Вызываем WebApp.sendMessage
-                    Telegram.WebApp.sendMessage('', true, true);
+                    Telegram.WebApp.shareMessage('', true, true);
                     console.log('Message sent successfully.');
                 } catch (error) {
                     console.error('Error sending message:', error);
