--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             // Обработка клика по кнопке
             button.addEventListener('click', () => {
-                window.Telegram.WebApp.shareMessage(messageId).then((result) => {
+                window.Telegram.WebApp.shareMessage('Test').then((result) => {
                     console.log("Сообщение успешно отправлено:", result);
                 }).catch((error) => {
                     console.error("Ошибка при отправке сообщения:", error);
