--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Telegram WebApp</h1>
     <button id="sendMessageButton">Send Message</button>
-    <a href="https://t.me/share/url?url=https://t.me/Kz52HbyCCQowkSzBot/app"></a>
+    <a href="https://t.me/share/url?url=https://t.me/Kz52HbyCCQowkSzBot/app">Share</a>
     <script>
         console.log(window.Telegram);
     </script>
