--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Telegram WebApp</h1>
-    <button id="sendMessageButton">Send Message</button>
-    <a href="https://t.me/share/url?url=https://t.me/Kz52HbyCCQowkSzBot/app">Share</a>
+    <a href="https://t.me/share/url?url=https://t.me/Kz52HbyCCQowkSzBot/app" onclick="event.preventDefault();">Share</a>
     <script>
         console.log(window.Telegram);
     </script>
