--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram WebApp Button</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@telegram-apps/sdk@2.11.3/dist/index.iife.min.js"></script>
 </head>
 <body>
     <h1>Telegram WebApp</h1>
-    <a href="tg://msg_url?url=https://t.me/Kz52HbyCCQowkSzBot/app">Share</a>
+    <button id="button" href="tg://msg_url?url=https://t.me/Kz52HbyCCQowkSzBot/app" onclick="share">Share</a>
     <script>
         console.log(window.Telegram);
+        console.log(window.telegramApps)
+       
+        const share = () => {
+            window.Telegram.WebView.postEvent('web_app_open_link', false, { url: "https://t.me/share/url?url=https://t.me/Kz52HbyCCQowkSzBot/app" });
+        }
     </script>
 </body>
 </html>
